# ocabra

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  docker-compose.dev.yml  docker-compose.fat.yml  docker-compose.slim.yml  docker-compose.yml  setup.sh
backend/: Dockerfile  Dockerfile.slim  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_enrich_request_stats.py  (+19 more)
backend/ocabra/: config.py  database.py  main.py  redis_client.py
backend/scripts/: build_bitnet.sh  install_acestep.sh  install_bitnet.sh  install_llama_cpp.sh
backend/tests/: conftest.py  test_auth_endpoints.py  test_auth_groups.py  test_auth_manager.py  test_backend_modalities.py  test_backend_process_manager.py  test_bitnet_backend.py  test_bitnet_registry.py  test_busy_timeout.py  test_chatterbox_backend.py  test_config_api.py  test_config_patch.py  test_diffusers_backend.py  test_downloads.py  test_downloads_ws.py  test_federation.py  test_federation_inventory.py  test_federation_proxy.py  test_federation_remote_ops.py  test_gpu_manager.py  test_gpu_power_settings.py  test_litellm_autosync_wiring.py  test_llama_cpp_backend.py  test_llama_cpp_estimator.py  test_llama_cpp_speculative.py  test_load_unload_e2e.py  test_main_cors.py  test_metrics.py  test_model_config.py  test_model_manager.py  test_model_manager_config.py  test_model_ref.py  test_models_api.py  test_ollama_api.py  test_openai_api.py  test_path_traversal.py  test_profile_resolution.py  test_profiles.py  test_realtime_session_routing.py  test_registry.py  (+22 more)
backend/workers/: chatterbox_worker.py  diffusers_worker.py  tts_worker.py  voxtral_worker.py  whisper_worker.py
(+362 files in other folders)
